--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -68,7 +68,7 @@
               <svg class="auth__icon-user">
                 <use xlink:href="#icon-user"></use>
               </svg>
-              <span class="header__span">  connexion</span>
+              <span class="header__span">  {{ 'login1.login' | translate }}</span>
             </button>
 
           </li>
@@ -78,7 +78,7 @@
               <svg class="auth__icon-user">
                 <use xlink:href="#icon-user"></use>
               </svg>
-              <span class="header__span">  Se déconnecter</span>
+              <span class="header__span">  {{ 'login1.logout' | translate }}</span>
             </button>
 
           </li>
@@ -115,7 +115,7 @@
       </div></a>
       <div id="navbar-collapse-1" [ngClass]="{'show':visibility}" class="navbar__wrap navbar__wrap--init">
         <ul class="navbar__nav">
-          <li class="navbar__item js-dropdown"><a class="navbar__link" [routerLink]="['acceuil']" routerLinkActive="active" >{{ 'header.acceuil' | translate }}
+          <li class="navbar__item js-dropdown"><a class="navbar__link" (click)="gotoacceuil()" routerLinkActive="active" >{{ 'header.acceuil' | translate }}
             <svg class="navbar__arrow">
               <use xlink:href="#icon-arrow-right"></use>
             </svg></a>
