--- a/src/app/liste-boutique/liste-boutique.component.html
+++ b/src/app/liste-boutique/liste-boutique.component.html
@@ -15,8 +15,8 @@
     <nav class="breadcrumbs">
       <div class="container">
         <ul>
-          <li class="breadcrumbs__item"><a href="" class="breadcrumbs__link">Home</a></li>
-          <li class="breadcrumbs__item"><a href="" class="breadcrumbs__link">Login</a></li>
+          <li class="breadcrumbs__item"><a href="" class="breadcrumbs__link">Acceuil</a></li>
+          <li class="breadcrumbs__item"><a href="" class="breadcrumbs__link">Liste Boutiques</a></li>
         </ul>
       </div>
     </nav>
@@ -61,7 +61,9 @@
 
                         </div>
                       </div>
-                      <div class="properties__params--mob"><a href="#" class="properties__more">View details</a><span class="properties__params">Built-Up - 85 Sq Ft</span><span class="properties__params">Land Size - 153 Sq Ft</span></div>
+                      <div class="properties__params--mob">
+
+                      </div>
                     </div>
                   </div>
                   <!-- end of block .properties__info-->
