--- a/src/app/ajouter-produit/ajouter-produit.component.html
+++ b/src/app/ajouter-produit/ajouter-produit.component.html
@@ -13,7 +13,7 @@
       <div class="container">
         <ul>
           <li class="breadcrumbs__item"><a href="" class="breadcrumbs__link">Acceuil</a></li>
-          <li class="breadcrumbs__item"><a href="" class="breadcrumbs__link">Ajouter Boutique</a></li>
+          <li class="breadcrumbs__item"><a href="" class="breadcrumbs__link">Ajouter Produit</a></li>
         </ul>
       </div>
     </nav>
@@ -33,31 +33,31 @@
 
                       <div class="row">
                         <div class="form-group">
-                          <label for="in-1" class="control-label">Nom de produit</label>
+                          <label for="in-1" class="control-label">{{ 'pageboutique.nom' | translate }}</label>
                           <input ngModel id="in-1" required name="nom" data-placeholder="---"  class="form-control">
                         </div>
                         <div class="form-group">
-                          <label for="in-4" class="control-label">Catégorie</label>
+                          <label for="in-4" class="control-label">{{ 'pageboutique.type' | translate }}</label>
                           <select ngModel id="in-4" name="categorie" data-placeholder="----" required class="form-control">
                             <option label=" "></option>
-                            <option value="Médicament">Médicament</option>
-                            <option value="Béauté">Béauté</option>
-                            <option value="bébé">bébé</option>
-                            <option value="maison">maison</option>
-                            <option value="alimentation">alimentation</option>
-                            <option value="hygiéne et entretien">hygiéne et entretien</option>
-                            <option value="bio et nature">bio et nature</option>
-                            <option value="brico et jardin">brico et jardin</option>
-                            <option value="animalerie">animalerie</option>
-                            <option value="mode et loisirs">mode et loisirs</option>
-                            <option value="librairie papeterie">librairie papeterie</option>
+                            <option value="Médicament">{{ 'pageboutique.medicament' | translate }}</option>
+                            <option value="Béauté">{{ 'pageboutique.beaute' | translate }}</option>
+                            <option value="bébé">{{ 'pageboutique.bebe' | translate }}</option>
+                            <option value="maison">{{ 'pageboutique.maison' | translate }}</option>
+                            <option value="alimentation">{{ 'pageboutique.alimentaire' | translate }}</option>
+                            <option value="hygiéne et entretien">{{ 'pageboutique.hydiene' | translate }}</option>
+                            <option value="bio et nature">{{ 'pageboutique.bio' | translate }}</option>
+                            <option value="brico et jardin">{{ 'pageboutique.brico' | translate }}</option>
+                            <option value="animalerie">{{ 'pageboutique.animalerie' | translate }}</option>
+                            <option value="mode et loisirs">{{ 'pageboutique.mode' | translate }}</option>
+                            <option value="librairie papeterie">{{ 'pageboutique.librairie' | translate }}</option>
 
                           </select>
                           <!-- end of block .form-property__control-->
                         </div>
 
                         <div class="form-group">
-                          <label for="in-6" class="control-label">référence</label>
+                          <label for="in-6" class="control-label">{{ 'produit.reference' | translate }}</label>
                           <input ngModel name="reference" id="in-6" type="text" placeholder="" required class="form-control">
                         </div>
                       </div>
@@ -66,19 +66,19 @@
                     <div id="form-block-2" class="form__block js-form-block">
                       <div class="row">
                         <div class="form-group">
-                          <label for="type" class="control-label">Status</label>
+                          <label for="type" class="control-label">{{ 'pageboutique.status' | translate }}</label>
                           <select #status (change)="changestatus(status)" ngModel name="status" id="type" placeholder="Type" class="form-control">
                             <option></option>
-                            <option value="à vendre">à vendre</option>
-                            <option value="à donner">à donner</option>
+                            <option value="à vendre">{{ 'pageboutique.vendre' | translate }}</option>
+                            <option value="à donner">{{ 'pageboutique.donner' | translate }}</option>
                           </select>
                         </div>
                         <div class="form-group">
-                          <label for="in-7a" class="control-label">Quantité</label>
+                          <label for="in-7a" class="control-label">{{ 'produit.quantite' | translate }}</label>
                           <input ngModel name="quantite" id="in-7a" min="1" max="100" type="number" placeholder="" required  class="form-control">
                         </div>
                         <div class="form-group">
-                          <label for="dlc"  class="control-label">Date limite de consommation</label>
+                          <label for="dlc"  class="control-label">{{ 'pageboutique.dlc' | translate }}</label>
                           <p-calendar type="date" [minDate]="mindate"  ngModel id="dlc" name="DLC" [(ngModel)]="value" dateFormat="yy-mm-dd" showButtonBar="true" ></p-calendar>
                         </div>
                       </div>
@@ -87,11 +87,11 @@
                     <div *ngIf="!status1" id="form-block-3" class="form__block js-form-block">
                       <div class="row">
                         <div class="form-group">
-                          <label for="in-7" class="control-label">Prix sans remise</label>
+                          <label for="in-7" class="control-label">{{ 'pageboutique.prixsansremise' | translate }}</label>
                           <input ngModel name="prixsansremise" id="in-7" type="text" placeholder="" required  class="form-control">
                         </div>
                         <div class="form-group">
-                          <label for="in-0" class="control-label">Prix avec remise</label>
+                          <label for="in-0" class="control-label">{{ 'pageboutique.prixavecremise' | translate }}</label>
                           <input ngModel name="prixavecremise" id="in-0" type="text" placeholder="" required  class="form-control">
                         </div>
 
@@ -104,7 +104,7 @@
                     <div id="form-block-4" >
                       <div class="row">
                         <div class="form-group">
-                          <label  class="control-label">Code à barre</label>
+                          <label  class="control-label">{{ 'produit.code' | translate }}</label>
                           <div class="video" id="camera"></div>
                         </div>
                       </div>
@@ -112,7 +112,7 @@
                     </div>
                     <div id="form-block-5" >
                     <div class="row">
-                      <button class="form__submit" (click)="addProduit(Produitboutique)" >Ajouter</button>
+                      <button class="form__submit" (click)="addProduit(Produitboutique)" >{{ 'ajoutboutique.ajouter' | translate }}</button>
                     </div></div>
                   </form>
                   <hr>
@@ -136,13 +136,13 @@
                   </div>
                   <nav class="worker__nav">
                     <ul>
-                      <li><a  (click)="gotoajout()">Profil</a></li>
-                      <li><a *ngIf="statis" (click)="gotoajoutProduit()" >Ajouter produit</a></li>
-                      <li><a (click)="gotoproduit()" >produits (à vendre)</a></li>
-                      <li><a (click)="gotodon()" >produits (à donner)</a></li>
-                      <li><a *ngIf="statis" (click)="gotoabonnement()" >Faire un abonnement</a></li>
-                      <li><a *ngIf="statis" >Vos abonnement</a></li>
-                      <li><a *ngIf="statis"  (click)="gotostatistique()">Statistique</a></li>
+                      <li><a  (click)="gotoajout()">{{ 'user.profil' | translate }}</a></li>
+                      <li><a *ngIf="statis" (click)="gotoajoutProduit()" >{{ 'profilboutique.ajoutP' | translate }}</a></li>
+                      <li><a (click)="gotoproduit()" >{{ 'profilboutique.vendre' | translate }}</a></li>
+                      <li><a (click)="gotodon()" >{{ 'profilboutique.don' | translate }}</a></li>
+                      <li><a *ngIf="statis" (click)="gotoabonnement()" >{{ 'profilboutique.abo' | translate }}</a></li>
+                      <li><a *ngIf="statis" >{{ 'profilboutique.abon' | translate }}</a></li>
+                      <li><a *ngIf="statis"  (click)="gotostatistique()">{{ 'profilboutique.stat' | translate }}</a></li>
                     </ul>
                   </nav>
                   <!-- end of block .worker__nav-->
