--- a/src/app/boutique/abonnement/abonnement.component.html
+++ b/src/app/boutique/abonnement/abonnement.component.html
@@ -6,9 +6,9 @@
     <nav class="breadcrumbs">
       <div class="container">
         <ul>
-          <li class="breadcrumbs__item"><a href="" class="breadcrumbs__link">Home</a></li>
-          <li class="breadcrumbs__item"><a href="" class="breadcrumbs__link">Liste des boutiques</a></li>
-          <li class="breadcrumbs__item"><a href="" class="breadcrumbs__link">Détail produit</a></li>
+          <li class="breadcrumbs__item"><a href="" class="breadcrumbs__link">Acceuil</a></li>
+          <li class="breadcrumbs__item"><a href="" class="breadcrumbs__link">Boutique</a></li>
+          <li class="breadcrumbs__item"><a href="" class="breadcrumbs__link">Abonnement</a></li>
         </ul>
       </div>
     </nav>
