--- a/src/app/boutique/afficher/afficher.component.html
+++ b/src/app/boutique/afficher/afficher.component.html
@@ -14,7 +14,7 @@
       <div class="container">
         <ul>
           <li class="breadcrumbs__item"><a href="" class="breadcrumbs__link">Acceuil</a></li>
-          <li class="breadcrumbs__item"><a href="" class="breadcrumbs__link">Ajouter Boutique</a></li>
+          <li class="breadcrumbs__item"><a href="" class="breadcrumbs__link">Profil Boutique</a></li>
         </ul>
       </div>
     </nav>
@@ -28,9 +28,9 @@
 
               <div class="widget js-widget widget--dashboard">
                 <div class="widget__header">
-                  <h2 class="widget__title">Profil</h2>
-                  <a *ngIf="status" class="widget__btn js-widget-btn" (click)="modifier()">Modifier Boutique</a>
-                  <a *ngIf="status" class="widget__btn js-widget-btn" (click)="deleteBoutique()">Supprimer Boutique</a>
+                  <h2 class="widget__title">{{ 'user.profil' | translate }}</h2>
+                  <a *ngIf="status" class="widget__btn js-widget-btn" (click)="modifier()">{{ 'profilboutique.modifier' | translate }}</a>
+                  <a *ngIf="status" class="widget__btn js-widget-btn" (click)="deleteBoutique()">{{ 'profilboutique.supprimer' | translate }}</a>
                 </div>
                 <div class="widget__content">
                   <div class="worker worker--profile">
@@ -43,14 +43,14 @@
                         <div class="clearfix"></div>
                         <div class="worker__contacts">
                           <div class="worker__intro-col">
-                            <div class="tel"><span class="type">Telephone</span><a class="uri value">{{boutique1.user.numtel}}</a></div>
-                            <div ><span class="type">Adresse</span><a  class="uri value">{{boutique1.adresse}}</a></div>
+                            <div class="tel"><span class="type">{{ 'user.telephone' | translate }}</span><a class="uri value">{{boutique1.user.numtel}}</a></div>
+                            <div ><span class="type">{{ 'user.adresse' | translate }}</span><a  class="uri value">{{boutique1.adresse}}</a></div>
                           </div>
                           <div class="worker__intro-col">
-                            <div ><span class="type">Email</span><a  class="uri value">{{boutique1.mailprofessionnelle}}</a></div>
+                            <div ><span class="type">{{ 'user.email' | translate }}</span><a  class="uri value">{{boutique1.mailprofessionnelle}}</a></div>
                           </div>
                           <div class="worker__intro-col">
-                            <div ><span class="type">Horaires D'ouverture</span><a  class="uri value">{{boutique1.horaire}}</a></div>
+                            <div ><span class="type">{{ 'profilboutique.horaire' | translate }}</span><a  class="uri value">{{boutique1.horaire}}</a></div>
                           </div>
                           <!-- end of block .worker__contacts-->
                           <div *ngIf="lat && lng">
@@ -81,7 +81,7 @@
           </div>
           <div class="sidebar">
             <div class="widget js-widget widget--sidebar widget--first-no-head">
-              <div class="widget__header"><a class="widget__btn js-widget-btn widget__btn--toggle">Show profile</a>
+              <div class="widget__header"><a class="widget__btn js-widget-btn widget__btn--toggle">Afficher profile</a>
               </div>
               <div class="widget__content">
                 <!-- BEGIN WORKER PROFILE-->
@@ -110,13 +110,13 @@
                   </div>
                   <nav class="worker__nav">
                     <ul>
-                      <li><a  (click)="gotoajout()">Profil</a></li>
-                      <li><a *ngIf="statis" (click)="gotoajoutProduit()" >Ajouter produit</a></li>
-                      <li><a (click)="gotoproduit()" >produits (à vendre)</a></li>
-                      <li><a (click)="gotodon()" >produits (à donner)</a></li>
-                      <li><a *ngIf="statis" (click)="gotoabonnement()" >Faire un abonnement</a></li>
-                      <li><a *ngIf="statis" >Vos abonnement</a></li>
-                      <li><a *ngIf="statis" (click)="gotostatistique()">Statistique</a></li>
+                      <li><a  (click)="gotoajout()">{{ 'user.profil' | translate }}</a></li>
+                      <li><a *ngIf="statis" (click)="gotoajoutProduit()" >{{ 'profilboutique.ajoutP' | translate }}</a></li>
+                      <li><a (click)="gotoproduit()" >{{ 'profilboutique.vendre' | translate }}</a></li>
+                      <li><a (click)="gotodon()" >{{ 'profilboutique.don' | translate }}</a></li>
+                      <li><a *ngIf="statis" (click)="gotoabonnement()" >{{ 'profilboutique.abo' | translate }}</a></li>
+                      <li><a *ngIf="statis" >{{ 'profilboutique.abon' | translate }}</a></li>
+                      <li><a *ngIf="statis" (click)="gotostatistique()">{{ 'profilboutique.stat' | translate }}</a></li>
                     </ul>
                   </nav>
                   <!-- end of block .worker__nav-->
