--- a/src/app/page-boutique/page-boutique.component.html
+++ b/src/app/page-boutique/page-boutique.component.html
@@ -32,7 +32,7 @@ becomes
       <div class="container">
         <ul>
           <li class="breadcrumbs__item"><a href="" class="breadcrumbs__link">Home</a></li>
-          <li class="breadcrumbs__item"><a href="" class="breadcrumbs__link">Login</a></li>
+          <li class="breadcrumbs__item"><a href="" class="breadcrumbs__link">Page Boutique</a></li>
         </ul>
       </div>
     </nav>
@@ -437,7 +437,9 @@ becomes
 
                         </div>
                       </div>
-                      <div class="properties__params--mob"><a href="#" class="properties__more">View details</a><span class="properties__params">Built-Up - 85 Sq Ft</span><span class="properties__params">Land Size - 153 Sq Ft</span></div>
+                      <div class="properties__params--mob">
+
+                      </div>
                     </div>
                   </div>
                   <!-- end of block .properties__info-->
